seaqt/QtWidgets/gen_qcolumnview.nim

proc fcQColumnView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_enterEvent".}
proc fQColumnView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_leaveEvent".}
proc fcQColumnView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_leaveEvent".}
proc fQColumnView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_moveEvent".}
proc fcQColumnView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_moveEvent".}
proc fQColumnView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_closeEvent".}
proc fcQColumnView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_closeEvent".}
proc fQColumnView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_tabletEvent".}
proc fcQColumnView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_tabletEvent".}
proc fQColumnView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_actionEvent".}
proc fcQColumnView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_actionEvent".}
proc fQColumnView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_showEvent".}
proc fcQColumnView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_showEvent".}
proc fQColumnView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_hideEvent".}
proc fcQColumnView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_hideEvent".}
proc fQColumnView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QColumnView_virtualbase_nativeEvent".}
proc fcQColumnView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_nativeEvent".}
proc fQColumnView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QColumnView_virtualbase_metric".}
proc fcQColumnView_override_virtual_metric(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_metric".}
proc fQColumnView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QColumnView_virtualbase_initPainter".}
proc fcQColumnView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_initPainter".}
proc fQColumnView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QColumnView_virtualbase_redirected".}
proc fcQColumnView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_redirected".}
proc fQColumnView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QColumnView_virtualbase_sharedPainter".}
proc fcQColumnView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_sharedPainter".}
proc fQColumnView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_childEvent".}
proc fcQColumnView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_childEvent".}
proc fQColumnView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_customEvent".}
proc fcQColumnView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_customEvent".}
proc fQColumnView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QColumnView_virtualbase_connectNotify".}
proc fcQColumnView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_connectNotify".}
proc fQColumnView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QColumnView_virtualbase_disconnectNotify".}
proc fcQColumnView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_disconnectNotify".}
proc fcQColumnView_staticMetaObject(): pointer {.importc: "QColumnView_staticMetaObject".}
proc fcQColumnView_delete(self: pointer) {.importc: "QColumnView_delete".}


func init*(T: type gen_qcolumnview_types.QColumnView, h: ptr cQColumnView): gen_qcolumnview_types.QColumnView =
  T(h: h)
proc create*(T: type gen_qcolumnview_types.QColumnView, parent: gen_qwidget_types.QWidget): gen_qcolumnview_types.QColumnView =
  gen_qcolumnview_types.QColumnView.init(fcQColumnView_new(parent.h))

proc create*(T: type gen_qcolumnview_types.QColumnView, ): gen_qcolumnview_types.QColumnView =
  gen_qcolumnview_types.QColumnView.init(fcQColumnView_new2())

proc metaObject*(self: gen_qcolumnview_types.QColumnView, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQColumnView_metaObject(self.h))

proc metacast*(self: gen_qcolumnview_types.QColumnView, param1: cstring): pointer =
  fcQColumnView_metacast(self.h, param1)

proc metacall*(self: gen_qcolumnview_types.QColumnView, param1: cint, param2: cint, param3: pointer): cint =
  fcQColumnView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qcolumnview_types.QColumnView, s: cstring): string =
  let v_ms = fcQColumnView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc updatePreviewWidget*(self: gen_qcolumnview_types.QColumnView, index: gen_qabstractitemmodel_types.QModelIndex): void =
  fcQColumnView_updatePreviewWidget(self.h, index.h)

type QColumnViewupdatePreviewWidgetSlot* = proc(index: gen_qabstractitemmodel_types.QModelIndex)
proc miqt_exec_callback_QColumnView_updatePreviewWidget(slot: int, index: pointer) {.exportc.} =
  let nimfunc = cast[ptr QColumnViewupdatePreviewWidgetSlot](cast[pointer](slot))
  let slotval1 = gen_qabstractitemmodel_types.QModelIndex(h: index)

  nimfunc[](slotval1)

proc onupdatePreviewWidget*(self: gen_qcolumnview_types.QColumnView, slot: QColumnViewupdatePreviewWidgetSlot) =
  var tmp = new QColumnViewupdatePreviewWidgetSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQColumnView_connect_updatePreviewWidget(self.h, cast[int](addr tmp[]))

proc indexAt*(self: gen_qcolumnview_types.QColumnView, point: gen_qpoint_types.QPoint): gen_qabstractitemmodel_types.QModelIndex =
  gen_qabstractitemmodel_types.QModelIndex(h: fcQColumnView_indexAt(self.h, point.h))

proc scrollTo*(self: gen_qcolumnview_types.QColumnView, index: gen_qabstractitemmodel_types.QModelIndex, hint: cint): void =
  fcQColumnView_scrollTo(self.h, index.h, cint(hint))

proc sizeHint*(self: gen_qcolumnview_types.QColumnView, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQColumnView_sizeHint(self.h))

proc visualRect*(self: gen_qcolumnview_types.QColumnView, index: gen_qabstractitemmodel_types.QModelIndex): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQColumnView_visualRect(self.h, index.h))

proc setModel*(self: gen_qcolumnview_types.QColumnView, model: gen_qabstractitemmodel_types.QAbstractItemModel): void =
  fcQColumnView_setModel(self.h, model.h)

proc setSelectionModel*(self: gen_qcolumnview_types.QColumnView, selectionModel: gen_qitemselectionmodel_types.QItemSelectionModel): void =
  fcQColumnView_setSelectionModel(self.h, selectionModel.h)

proc setRootIndex*(self: gen_qcolumnview_types.QColumnView, index: gen_qabstractitemmodel_types.QModelIndex): void =
  fcQColumnView_setRootIndex(self.h, index.h)

proc selectAll*(self: gen_qcolumnview_types.QColumnView, ): void =
  fcQColumnView_selectAll(self.h)

proc setResizeGripsVisible*(self: gen_qcolumnview_types.QColumnView, visible: bool): void =
  fcQColumnView_setResizeGripsVisible(self.h, visible)

proc resizeGripsVisible*(self: gen_qcolumnview_types.QColumnView, ): bool =
  fcQColumnView_resizeGripsVisible(self.h)

proc previewWidget*(self: gen_qcolumnview_types.QColumnView, ): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget(h: fcQColumnView_previewWidget(self.h))

proc setPreviewWidget*(self: gen_qcolumnview_types.QColumnView, widget: gen_qwidget_types.QWidget): void =
  fcQColumnView_setPreviewWidget(self.h, widget.h)

proc setColumnWidths*(self: gen_qcolumnview_types.QColumnView, list: seq[cint]): void =
  var list_CArray = newSeq[cint](len(list))
  for i in 0..<len(list):
    list_CArray[i] = list[i]

  fcQColumnView_setColumnWidths(self.h, struct_miqt_array(len: csize_t(len(list)), data: if len(list) == 0: nil else: addr(list_CArray[0])))

proc columnWidths*(self: gen_qcolumnview_types.QColumnView, ): seq[cint] =
  var v_ma = fcQColumnView_columnWidths(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc tr*(_: type gen_qcolumnview_types.QColumnView, s: cstring, c: cstring): string =
  let v_ms = fcQColumnView_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qcolumnview_types.QColumnView, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQColumnView_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc QColumnViewmetaObject*(self: gen_qcolumnview_types.QColumnView, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fQColumnView_virtualbase_metaObject(self.h))

type QColumnViewmetaObjectProc* = proc(): gen_qobjectdefs_types.QMetaObject
proc onmetaObject*(self: gen_qcolumnview_types.QColumnView, slot: QColumnViewmetaObjectProc) =
  # TODO check subclass
  var tmp = new QColumnViewmetaObjectProc
  tmp[] = slot
  GC_ref(tmp)
  fcQColumnView_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QColumnView_metaObject(self: ptr cQColumnView, slot: int): pointer {.exportc: "miqt_exec_callback_QColumnView_metaObject ".} =
  var nimfunc = cast[ptr QColumnViewmetaObjectProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QColumnViewmetacast*(self: gen_qcolumnview_types.QColumnView, param1: cstring): pointer =
  fQColumnView_virtualbase_metacast(self.h, param1)

type QColumnViewmetacastProc* = proc(param1: cstring): pointer
proc onmetacast*(self: gen_qcolumnview_types.QColumnView, slot: QColumnViewmetacastProc) =
  # TODO check subclass
  var tmp = new QColumnViewmetacastProc
  tmp[] = slot
  GC_ref(tmp)
  fcQColumnView_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QColumnView_metacast(self: ptr cQColumnView, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QColumnView_metacast ".} =
  var nimfunc = cast[ptr QColumnViewmetacastProc](cast[pointer](slot))
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QColumnViewmetacall*(self: gen_qcolumnview_types.QColumnView, param1: cint, param2: cint, param3: pointer): cint =
  fQColumnView_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QColumnViewmetacallProc* = proc(param1: cint, param2: cint, param3: pointer): cint
proc onmetacall*(self: gen_qcolumnview_types.QColumnView, slot: QColumnViewmetacallProc) =
  # TODO check subclass
  var tmp = new QColumnViewmetacallProc
  tmp[] = slot
  GC_ref(tmp)
  fcQColumnView_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QColumnView_metacall(self: ptr cQColumnView, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QColumnView_metacall ".} =
  var nimfunc = cast[ptr QColumnViewmetacallProc](cast[pointer](slot))
  let slotval1 = cint(param1)

  let slotval2 = param2

  let slotval3 = param3

